--- a/pages/standings.html
+++ b/pages/standings.html
@@ -25,7 +25,7 @@
 <body>
 
     <div class="header-nonbs standings hidden-xs">
-        <div class="brand">World's Cableway Racing League</div>
+        <div class="league">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
 
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-brand" href="index.html">Cableway Racing League</a>
+                <a class="navbar-league" href="index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -328,9 +328,9 @@
                     <img class="img-responsive img-border-left" src="../img/slide-2.jpg" alt="">
                 </div>
                 <div class="col-md-6 text-left">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p class="text-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p class="text-right">Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
+                    <p class="text-right">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -351,7 +351,7 @@
                     <h3>John Lucoth<br>
                         <small>1st Cabin Racer</small>
                     </h3>
-                    <p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
+                    <p class="text-left"><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Mark.jpg" alt="Mark Sethengore">
@@ -365,7 +365,7 @@
                     <h3>Bella Dale<br>
                         <small>3rd Cabin Racer</small>
                     </h3>
-                    <p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
+                    <p class="text-right"><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
                 </div>
                 <div class="clearfix"></div>
             </div>
