--- a/pages/signup.html
+++ b/pages/signup.html
@@ -25,7 +25,7 @@
 <body>
 
     <div class="header-nonbs signup hidden-xs">
-        <div class="brand">World's Cableway Racing League</div>
+        <div class="league">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
 
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-brand" href="index.html">Cableway Racing League</a>
+                <a class="navbar-league" href="index.html">Cableway Racing League</a>
             </div>
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
