MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-league" href="index.html">Cableway Racing League</a>
+                <a class="navbar-league text-uppercase" href="index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
