--- a/pages/signup.html
+++ b/pages/signup.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-league" href="index.html">Cableway Racing League</a>
+                <a class="navbar-league text-uppercase" href="index.html">Cableway Racing League</a>
             </div>
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
