--- a/pages/standings.html
+++ b/pages/standings.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             
-            <div class="navbar-header  visible-xs">
+            <div class="navbar-header visible-xs">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-league" href="index.html">Cableway Racing League</a>
+                <a class="navbar-league text-uppercase" href="index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
