--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>World's Cableway Racing League</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Latest Compiled and Minified Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My CSS -->
@@ -45,7 +45,7 @@
             </div>
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav text-uppercase">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
-                    <h2 class="league-before">
+                    <h2 class="league-before text-capitalize">
                         <small>Simply the Best</small>
                     </h2>
                     <h1 class="league-name">World's Cableway Racing League: Canadian Division</h1>
@@ -104,24 +104,24 @@
             
         <div class="row">
             <div class="box">
-                <div id="carousel-example-generic" class="carousel slide">
+                <div id="carousel" class="carousel slide" data-interval="4000">
                         <!-- Indicators -->
                     <ol class="carousel-indicators hidden-xs">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
                     </ol>
 
                         <!-- Wrapper for slides -->
                      <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                            <img class="img-responsive" src="img/slide-1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
+                            <img class="img-responsive" src="img/slide-2.jpg" alt="">
                         </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-3.jpg" alt="">
                         </div>
                     </div>
 
@@ -164,16 +164,16 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- Latest Compiled and Minified Bootstrap JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
+    <!-- Script to Start the Carousel instead of just Clicking it-->
     <script>
-    $('.carousel').carousel({
-        interval: 5000 
-    })
+        $('.carousel').carousel({
+            interval: 4000 
+        })
     </script>
 
 </body>
