--- a/pages/locations.html
+++ b/pages/locations.html
@@ -43,9 +43,9 @@
                 
                 <a class="navbar-league text-uppercase" href="index.html">Cableway Racing League</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav text-uppercase">
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
@@ -78,7 +78,11 @@
                 <div class="col-md-8">
                    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?q=17+Carling+Ave,+Ottawa,+ON+K1S+2E1/@45.4011181,-75.6998176,17z&zoom=15&key=AIzaSyDP68CXSK9TynSN4n_Moo7PPakL8SQM0xk"></iframe>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 text-center">
+                    <p><strong>World's Cableway Racing League</strong>
+                        <br>Canadian Divison
+                    </p>
+                    <hr>
                     <p>Phone:
                         <strong>613.111.2233</strong>
                     </p>
@@ -89,31 +93,34 @@
                         <strong>17 Carling Avenue
                             <br>Ottawa, ON K1A 0E9</strong>
                     </p>
+                    <p>Training Locations:
+                        <strong>see below</strong>
+                    </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-        <div class="col-lg-12">
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">The
                         <strong>Training Locations</strong>
                     </h2>
                     <hr>
                 </div>
-        <div class="row">
-            <div class="box">
+                <div class="clearfix"></div>
                 <ul id="center" class="list-group">
-        <li class="list-group-item col-sm-6 col-md-4"><img src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
-&markers=color:green" style="height: 100%; width: 100%;" alt="Google Maps" class="img-responsive"/><h5></h5></li>
-        <li class="list-group-item col-sm-6 col-md-4"><img src="map-2"/><h5></h5></li>
-        <li class="list-group-item col-sm-6 col-md-4"><img id="map-3"/><h5></h5></li>
-        <li class="list-group-item col-sm-6 col-md-4"><img id="map-4"/><h5></h5></li>
-        <li class="list-group-item col-sm-6 col-md-4"><img id="map-5"/><h5></h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-6"/><h5></h5></li>
-    </ul>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
+&markers=color:green" alt="Google Maps" /><h5></h5></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
+&markers=color:green" alt="Google Maps" /><h5></h5></li>
+                <li class="list-group-item col-sm-4 text-center"><img class="img-responsive" src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
+&markers=color:green" alt="Google Maps" /><h5></h5></li>
+                </ul>
+                <div class="clearfix"></div>
             </div>
         </div>
-
     </div>
     <!-- /.container -->
 
@@ -126,12 +133,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
