--- a/pages/signup.html
+++ b/pages/signup.html
@@ -45,7 +45,7 @@
             </div>
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav text-uppercase">
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
@@ -215,12 +215,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
