--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             
         <div class="row">
             <div class="box">
-                <div id="carousel" class="carousel slide" data-interval="4000">
+                <div id="carousel" class="carousel slide">
                         <!-- Indicators -->
                     <ol class="carousel-indicators hidden-xs">
                         <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -126,10 +126,10 @@
                     </div>
 
                     <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <a class="left carousel-control" href="#carousel" data-slide="prev">
                         <span class="icon-prev"></span>
                     </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <a class="right carousel-control" href="#carousel" data-slide="next">
                         <span class="icon-next"></span>
                     </a>
                 </div>
@@ -172,7 +172,7 @@
     <!-- Script to Start the Carousel instead of just Clicking it-->
     <script>
         $('.carousel').carousel({
-            interval: 4000 
+            interval: 5000 
         })
     </script>
 
