--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-            
+                        <!-- Carousel -->
         <div class="row">
             <div class="box">
                 <div id="carousel" class="carousel slide">
@@ -113,15 +113,18 @@
                     </ol>
 
                         <!-- Wrapper for slides -->
-                     <div class="carousel-inner">
+                    <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="img/slide-1.jpg" alt="">
+                            <img class="img-responsive" src="img/slide-1_1280.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="img/slide-2.jpg" alt="">
+                            <img class="img-responsive" src="img/slide-2_1280.jpg" alt="">
                         </div>
-                            <div class="item">
-                                <img class="img-responsive" src="img/slide-3.jpg" alt="">
+                        <div class="item">
+                            <img class="img-responsive" src="img/slide-3_1280.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="img/slide-4_1280.jpg" alt="">
                         </div>
                     </div>
 
