MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -115,20 +115,96 @@
                         <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="img/slide-1_1280.jpg" alt="">
+                            <picture>
+                                <source
+                                    media="(max-width: 320px)"
+                                    srcset="img/slide-1_256.jpg">
+                                <source
+                                    media="(max-width: 479px)"
+                                    srcset="img/slide-1_512.jpg">
+                                <source
+                                    media="(max-width: 991px)"
+                                    srcset="img/slide-1_768.jpg">
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="img/slide-1_1024.jpg">
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/slide-1_1280.jpg">
+                                <img class="img-responsive"
+                                    src="img/slide-1_1280.jpg"
+                                    alt="slide 4">
+                            </picture>
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="img/slide-2_1280.jpg" alt="">
+                            <picture>
+                                <source
+                                    media="(max-width: 320px)"
+                                    srcset="img/slide-2_256.jpg">
+                                <source
+                                    media="(max-width: 479px)"
+                                    srcset="img/slide-2_512.jpg">
+                                <source
+                                    media="(max-width: 991px)"
+                                    srcset="img/slide-2_768.jpg">
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="img/slide-2_1024.jpg">
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/slide-2_1280.jpg">
+                                <img class="img-responsive"
+                                    src="img/slide-2_1280.jpg"
+                                    alt="slide 2">
+                            </picture>
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="img/slide-3_1280.jpg" alt="">
+                            <picture>
+                                <source
+                                    media="(max-width: 320px)"
+                                    srcset="img/slide-3_256.jpg">
+                                <source
+                                    media="(max-width: 479px)"
+                                    srcset="img/slide-3_512.jpg">
+                                <source
+                                    media="(max-width: 991px)"
+                                    srcset="img/slide-3_768.jpg">
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="img/slide-3_1024.jpg">
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/slide-3_1280.jpg">
+                                <img class="img-responsive"
+                                    src="img/slide-3_1280.jpg"
+                                    alt="slide 3">
+                            </picture>
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="img/slide-4_1280.jpg" alt="">
+                            <picture>
+                                <source
+                                    media="(max-width: 320px)"
+                                    srcset="img/slide-4_256.jpg">
+                                <source
+                                    media="(max-width: 479px)"
+                                    srcset="img/slide-4_512.jpg">
+                                <source
+                                    media="(max-width: 991px)"
+                                    srcset="img/slide-4_768.jpg">
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="img/slide-4_1024.jpg">
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/slide-4_1280.jpg">
+                                <img class="img-responsive"
+                                    src="img/slide-4_1280.jpg"
+                                    alt="slide 4">
+                            </picture>
                         </div>
                     </div>
-
-                    <!-- Controls -->
+                    
+                        <!-- Controls -->
                     <a class="left carousel-control" href="#carousel" data-slide="prev">
                         <span class="icon-prev"></span>
                     </a>
