--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
+<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
@@ -132,12 +133,14 @@
                                 <source
                                     media="(min-width: 1200px)"
                                     srcset="img/slide-1_1280.jpg">
+-->
                                 <img class="img-responsive"
                                     src="img/slide-1_1280.jpg"
                                     alt="slide 4">
-                            </picture>
+<!--                            </picture>-->
                         </div>
                         <div class="item">
+<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
@@ -154,12 +157,14 @@
                                 <source
                                     media="(min-width: 1200px)"
                                     srcset="img/slide-2_1280.jpg">
+-->
                                 <img class="img-responsive"
                                     src="img/slide-2_1280.jpg"
                                     alt="slide 2">
-                            </picture>
+<!--                            </picture>-->
                         </div>
                         <div class="item">
+<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
@@ -176,12 +181,14 @@
                                 <source
                                     media="(min-width: 1200px)"
                                     srcset="img/slide-3_1280.jpg">
+-->
                                 <img class="img-responsive"
                                     src="img/slide-3_1280.jpg"
                                     alt="slide 3">
-                            </picture>
+<!--                            </picture>-->
                         </div>
                         <div class="item">
+<!--
                             <picture>
                                 <source
                                     media="(max-width: 320px)"
@@ -198,10 +205,11 @@
                                 <source
                                     media="(min-width: 1200px)"
                                     srcset="img/slide-4_1280.jpg">
+-->
                                 <img class="img-responsive"
                                     src="img/slide-4_1280.jpg"
                                     alt="slide 4">
-                            </picture>
+<!--                            </picture>-->
                         </div>
                     </div>
                     
