MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                                     srcset="img/slide-1_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-1_1280.jpg"
-                                    alt="slide 4">
+                                    src="img/slide-1.jpg"
+                                    alt="slide 1">
 <!--                            </picture>-->
                         </div>
                         <div class="item">
@@ -159,7 +159,7 @@
                                     srcset="img/slide-2_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-2_1280.jpg"
+                                    src="img/slide-2.jpg"
                                     alt="slide 2">
 <!--                            </picture>-->
                         </div>
@@ -183,7 +183,7 @@
                                     srcset="img/slide-3_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-3_1280.jpg"
+                                    src="img/slide-3.jpg"
                                     alt="slide 3">
 <!--                            </picture>-->
                         </div>
@@ -207,7 +207,7 @@
                                     srcset="img/slide-4_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-4_1280.jpg"
+                                    src="img/slide-4.jpg"
                                     alt="slide 4">
 <!--                            </picture>-->
                         </div>
