MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     srcset="img/slide-1_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-1.jpg"
+                                    src="img/slide1-1280.jpg"
                                     alt="slide 1">
 <!--                            </picture>-->
                         </div>
