MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                                     srcset="img/slide-1_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-1-1280.jpg"
-                                    alt="slide 1">
+                                    src="img/home-1280.jpg"
+                                    alt="home focal image">
 <!--                            </picture>-->
                         </div>
                         <div class="item">
@@ -159,8 +159,8 @@
                                     srcset="img/slide-2_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-2.jpg"
-                                    alt="slide 2">
+                                    src="img/standings-1280.jpg"
+                                    alt="standings focal image">
 <!--                            </picture>-->
                         </div>
                         <div class="item">
@@ -183,8 +183,8 @@
                                     srcset="img/slide-3_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-3.jpg"
-                                    alt="slide 3">
+                                    src="img/locations-1280.jpg"
+                                    alt="locations focal image">
 <!--                            </picture>-->
                         </div>
                         <div class="item">
@@ -207,8 +207,8 @@
                                     srcset="img/slide-4_1280.jpg">
 -->
                                 <img class="img-responsive"
-                                    src="img/slide-4.jpg"
-                                    alt="slide 4">
+                                    src="img/signup-1280.jpg"
+                                    alt="signup focal image">
 <!--                            </picture>-->
                         </div>
                     </div>
